--- a/EMA_email_form.css
+++ b/EMA_email_form.css
@@ -43,3 +43,75 @@
     vertical-align: middle;
     margin-top: 2px;
 }
+
+.main_window {
+    width: 700px;
+    height: 420px;
+    position: absolute;
+    top: 90px;
+    left: 162px;
+    padding-left: 2%;
+    padding-top: 1%;
+}
+
+.breadcrumb_bar {
+    position: absolute;
+    width: inherit;
+    height: 40px;
+    margin-bottom: 10px;
+    vertical-align: middle;
+    line-height: 40px;
+    font: normal normal bold 100%/40px Arial, Helvetica, sans-serif;
+    text-indent: 5px;
+
+}
+
+.content {
+    position: absolute;
+    top: 50px;
+
+    width: inherit;
+    height: 370px;
+
+}
+
+#message_form {
+
+    width: inherit;
+
+    padding: 3%;
+    height: 90%;
+
+}
+
+.form_field {
+
+    left: 30px;
+    width: 100%;
+    margin-bottom: 32px;
+
+}
+
+.form_label {
+
+    left: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.form_input {
+
+    position: absolute;
+    left: 200px;
+    width: 70%;
+
+}
+
+.form_button {
+    position: absolute;
+    width: 50px;
+    bottom: 0px;
+    right: 0px;
+}
+
+
+
